[package]
name = "libusb"
version = "0.3.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/dcuddeback/libusb-rs"
repository = "https://github.com/dcuddeback/libusb-rs.git"
documentation = "http://dcuddeback.github.io/libusb-rs/libusb/"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "bindings"]

[dependencies]
bit-set = "0.2.0"
libusb-sys = "0.2.3"
libc = "0.2"

[dev-dependencies]
regex = "0.1.26"

[[bin]]
name = "libinfo"
path = "examples/libinfo.rs"
doc = false

[[bin]]
name = "usbtree"
path = "examples/usbtree.rs"
doc = false

[[bin]]
name = "device-info"
path = "examples/device_info.rs"
doc = false
